fix: speakers gap

--- a/components/speakers/Speakers.module.css
+++ b/components/speakers/Speakers.module.css
@@ -8,5 +8,5 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 4rem;
+  gap: 2.5rem;
 }
